# [build-system]
# requires = ["setuptools"]
# build-backend = "setuptools.build_meta"

[project]
name = "Cr0wl3r"
version = "1.1.1"
dependencies = []
authors = [
    {name = "Maurice Lambert", email = "mauricelambert434@gmail.com"},
]
maintainers = [
    {name = "Maurice Lambert", email = "mauricelambert434@gmail.com"},
]
description = "This module implements a crawler to find all links and resources on the target web site."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "GPL-3.0 License"}
classifiers = [
    "Topic :: Security",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Topic :: System :: Shells",
    "Natural Language :: English",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Topic :: System :: System Shells",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.9",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: System Administrators",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking",
]
keywords = [
    "Crawler",
    "Scraper",
    "Scan",
    "Web",
    "Pentest",
    "Discovery",
    "Security",
    "Selenium",
    "URL",
    "URI",
]

[project.scripts]
Cr0wl3r = "Cr0wl3r:main"

[project.urls]
"Github" = "https://github.com/mauricelambert/Cr0wl3r"
"Documentation" = "https://mauricelambert.github.io/info/python/security/Cr0wl3r.html"
"Python Executable" = "https://mauricelambert.github.io/info/python/security/Cr0wl3r.pyz"
"Windows Executable" = "https://mauricelambert.github.io/info/python/security/Cr0wl3r.exe"

[tool.setuptools]
include-package-data = true
platforms = ["Windows", "Linux", "MacOS"]
py-modules = ["Cr0wl3r"]
packages = []
script-files = []

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
