[metadata]
name = Cr0wl3r
version = 1.1.1
author = Maurice Lambert
author_email = mauricelambert434@gmail.com
maintainer = Maurice Lambert
maintainer_email = mauricelambert434@gmail.com
description = This module implements a crawler to find all links and resources on the target web site.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mauricelambert/Cr0wl3r
project_urls = Github = https://github.com/mauricelambert/Cr0wl3r, Documentation = https://mauricelambert.github.io/info/python/security/Cr0wl3r.html, Python Executable = https://mauricelambert.github.io/info/python/security/Cr0wl3r.pyz, Windows Executable = https://mauricelambert.github.io/info/python/security/Cr0wl3r.exe
download_url = https://mauricelambert.github.io/info/python/security/Cr0wl3r.pyz
classifiers = 
	Topic :: Security
	Environment :: Console
	Operating System :: MacOS
	Operating System :: POSIX
	Topic :: System :: Shells
	Natural Language :: English
	Topic :: Internet :: WWW/HTTP
	Programming Language :: Python
	Intended Audience :: Developers
	Topic :: System :: System Shells
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Programming Language :: Python :: 3.9
	Operating System :: Microsoft :: Windows
	Topic :: Software Development :: Libraries
	Intended Audience :: System Administrators
	Development Status :: 5 - Production/Stable
	Topic :: Internet :: WWW/HTTP :: Indexing/Search
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking
keywords = Crawler, Scraper, Scan, Web, Pentest, Discovery, Security, Selenium, URL, URI
platforms = Windows, Linux, MacOS
license = GPL-3.0 License
license_files = LICENSE.txt

[options]
include_package_data = True
python_requires = >=3.8
py_modules = Cr0wl3r
install_requires = 

[options.entry_points]
console_scripts = 
	Cr0wl3r = Cr0wl3r:main

[egg_info]
tag_build = 
tag_date = 0

